--- a/index.html
+++ b/index.html
@@ -43,12 +43,24 @@
 
     <main class="main-content">
       <h1>Top New CSS Features showcase</h1>
+      <h2>
+        Created by
+        <a href="https://hoseinh.com/portfolio" target="_blank"
+          >Hosein Hamzenejadi</a
+        >
+      </h2>
       <p>
-        It's important to keep in mind that this page serves as a learning
-        resource and demonstration of new CSS features. To ensure proper
-        functioning and cross-browser compatibility, it's always recommended to
-        consider fallbacks. View this page using the latest version of Chrome
-        for the best learning experience.
+        I've also written a comprehensive blog post about this topic:
+        <a
+          href="https://hoseinh.com/portfolio/posts/top-20-new-game-changing-css-features"
+          >Check it out!</a
+        >
+      </p>
+      <p>
+        This page serves as a learning resource and demonstration of new CSS
+        features. To ensure proper functioning and cross-browser compatibility,
+        it's always recommended to consider fallbacks. View this page using the
+        latest version of Chrome for the best learning experience.
       </p>
 
       <h3 id="container-queries">1. resize and container queries</h3>
