add readme and improve links

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
       <h1>Top New CSS Features showcase</h1>
       <h2>
         Created by
-        <a href="https://hoseinh.com/portfolio" target="_blank"
-          >Hosein Hamzenejadi</a
-        >
+        <a href="https://hoseinh.com/portfolio" target="_blank">
+          Hosein Hamzenejadi
+        </a>
       </h2>
       <p>
         I've also written a comprehensive blog post about this topic:
         <a
           href="https://hoseinh.com/portfolio/posts/top-20-new-game-changing-css-features"
-          >Check it out!</a
-        >
+          target="_blank">
+            Check it out!
+        </a>
       </p>
       <p>
         This page serves as a learning resource and demonstration of new CSS
@@ -71,8 +72,9 @@
           href="https://caniuse.com/css-container-queries"
           target="_blank"
           rel="noopener noreferrer"
-          >CSS container queries</a
         >
+          CSS container queries
+        </a>
       </div>
       <div class="row">
         <aside class="resizable blue container">
