--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       <p>
         This page serves as a learning resource and demonstration of new CSS
         features. To ensure proper functioning and cross-browser compatibility,
-        it's always recommended to consider fallbacks. View this page using the
+        it's always recommended to consider fallbacks. <strong>Some of these features
+        are still experimental or work only on chromium browsers for now.</strong> View this page using the
         latest version of Chrome for the best learning experience.
       </p>
 
